[gd_scene load_steps=5 format=3 uid="uid://b6xx3gbl0sid"]

[ext_resource type="Script" uid="uid://bsms6nah4fqkf" path="res://shared/ui/items_grid/amount_slider.gd" id="1_awhc7"]
[ext_resource type="StyleBox" uid="uid://vdqifgistcp3" path="res://shared/trade/hover_btn.tres" id="2_2mw01"]
[ext_resource type="StyleBox" uid="uid://k2v8wwfiofoo" path="res://shared/trade/cancel_btn.tres" id="2_165yl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n3h78"]
bg_color = Color(0.443137, 0.443137, 0.443137, 1)

[node name="ItemSlider" type="Panel"]
custom_minimum_size = Vector2(548, 113)
offset_right = 548.0
offset_bottom = 113.0
theme_override_styles/panel = SubResource("StyleBoxFlat_n3h78")
script = ExtResource("1_awhc7")
metadata/_edit_vertical_guides_ = [274.0]

[node name="slider" type="HSlider" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -256.0
offset_top = 11.0
offset_right = 256.0
offset_bottom = 27.0
grow_horizontal = 2

[node name="amount" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -27.5
offset_right = 67.5
offset_bottom = 12.5
grow_horizontal = 2
grow_vertical = 2

[node name="itemName" type="Label" parent="amount"]
layout_mode = 2
text = "item name:"
horizontal_alignment = 1

[node name="input" type="LineEdit" parent="amount"]
layout_mode = 2
text = "10"
virtual_keyboard_type = 2

[node name="min" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -24.5
offset_right = 56.0
offset_bottom = -1.5
grow_vertical = 2
text = "10"

[node name="max" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -24.5
offset_right = -14.0
offset_bottom = -1.5
grow_horizontal = 0
grow_vertical = 2
text = "10"
horizontal_alignment = 2

[node name="setToMin" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -37.0
offset_right = 68.0
offset_bottom = -6.0
grow_vertical = 0
theme_override_styles/hover = ExtResource("2_2mw01")
text = "Min"

[node name="setToMax" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 482.0
offset_top = -37.0
offset_right = 534.0
offset_bottom = -6.0
grow_vertical = 0
theme_override_styles/hover = ExtResource("2_2mw01")
text = "Max"

[node name="apply" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -37.0
offset_right = -4.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/hover = ExtResource("2_2mw01")
text = "Apply"

[node name="cancel" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -37.0
offset_right = 103.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/focus = ExtResource("2_165yl")
theme_override_styles/disabled = ExtResource("2_165yl")
theme_override_styles/hover = ExtResource("2_2mw01")
theme_override_styles/pressed = ExtResource("2_165yl")
theme_override_styles/normal = ExtResource("2_165yl")
text = "Cancel"

[connection signal="value_changed" from="slider" to="." method="_on_slider_value_changed"]
[connection signal="text_submitted" from="amount/input" to="." method="_on_input_text_submitted"]
[connection signal="pressed" from="setToMin" to="." method="_on_set_to_min_pressed"]
[connection signal="pressed" from="setToMax" to="." method="_on_set_to_max_pressed"]
[connection signal="pressed" from="apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="cancel" to="." method="_on_cancel_pressed"]
